#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <http://www.gnu.org/licenses/>.
#
################################################################


2013-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999912 released.

        * Rusumed long delayed work on Admin Menu.


2013-07-19  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999911 released.

        * Fixed the last of the known &mirror() bugs.

        * Fixed the last of known bugs when using FullAuto
          with local Virtual Box on Windows.


2013-07-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999910 released.

        * Fixed a bunch of &mirror() bugs.

        * Fixed bugs when using FullAuto with local Virtual
          Box on Windows.


2013-07-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999909 released.

        * Fixed bugs when using FullAuto with local Virtual
          Box on Windows.


2013-07-09  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999908 released.

        * Menus can now be dynamically loaded allowing login
          for some items but not others.

        * New --admin switch to bring up Admin Menu. 


2013-06-26  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999907 released.

        * New work on needed privilige error messages.
          (for Windows 7 and global policies)


2013-06-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 0.99999906 released.

        * Now checks sshd account priviliges every invocation.
          (for Windows 7 and global policies)

        * When gets sshd Stopped message, checks for orphans.

        * Updated Makefile.PL to ask for local sshd account.

