@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 c62baa488414609d999a5a5e166152f9b13d5126 ChangeLog
+SHA1 1b1d15b77d29444a56f72cf6330e8391dc55bb55 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 ac7a0ce6e9500803c6ef3b497c5235c14f36fa3c META.yml
-SHA1 f2d4a39621894f13ef816603c1186b701e985846 MYMETA.json
-SHA1 85408e0d0dcc575af757bfca45c00f8b05483058 MYMETA.yml
-SHA1 471087b1928d1ca202bd78eeab722526f1cf8235 Makefile.PL
+SHA1 25982bb736a2050727ed243b03324efd74715f49 META.yml
+SHA1 604dcd828a32ca481393e4b8f8d70db3e21ec855 MYMETA.json
+SHA1 18f9d2102a69a4cbda440fe94566665d325515b6 MYMETA.yml
+SHA1 2925b4f23c96ecd2d0ef24fb7b64de56214cbf17 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 26ab05febbdab79359953d086b447397c1719b5c bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 225dc1fa8a31e86954f43fb8e6a2060c9c54e6f8 install_mozrepl_plugin.ahk
-SHA1 6dc492a26a0ee20e3c555fe2f08a9a67359fb1e0 lib/Net/FullAuto.pm
+SHA1 3dc125c90d0e744b2ea75dc6996f4093ff19a13e lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -50,17 +50,17 @@ SHA1 652187d2e9b92347b5ce4622086b2314ad9962ee lib/Net/FullAuto/Distro/fa_maps.pm
 SHA1 35b0f57527b9813d39d63df1e3db84fdc13e9514 lib/Net/FullAuto/Distro/fa_menu.pm
 SHA1 e0f261e25b722eb59848bcd0a9ee2936a6cc5d87 lib/Net/FullAuto/Distro/fa_menu_demo.pm
 SHA1 c61c03f9beda14559fdf07e569e813a2bd553a53 lib/Net/FullAuto/Distro/fullautologo.jpg
-SHA1 3e454b2777f44bed6f66a36d07d4bbb4218002cf lib/Net/FullAuto/FA_Core.pm
+SHA1 3331532157ab1430b2ddfeb6da317728614bc143 lib/Net/FullAuto/FA_Core.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJR60jHAAoJEBa/9Pad787ETpQH/1xyXNnyWjFPULGaKn0M2FWZ
-cEk3oHvhS0fKLau83fTMUPCJXf3sBcjrBvc1a3O9EvRiqeusDS8TkXJyLVBUObH2
-DCoU94dXG10ZbCsOxloVJJBB6hHEdfrnxkgyIXSGrc8pHCF/5vSWd7OO2dp679Yp
-n9/wlrQBsVl3BrtOLdD7NMBnhimDKso4yE1l6CR8D2LGGixi7XdMTTmBginRp8yF
-6tsNgclIzcr3Yg7B4Bm5wV0iGykPBy/iCZ2bMQLX/j4XS6LvPpPE96hOBmAt0XE0
-fLLQf/G0904fvzJ9am+P/QPIKo39uH3wz7jQ9kg1vO/R/3Lzj/CMdXxLpxPF8cE=
-=j9I0
+iQEcBAEBAgAGBQJR7EHiAAoJEBa/9Pad787EXrUH/i5ZlfFHg7R4Qf3e+Dq64Qg6
+rXXraER8h0DiY3OZaums1TSK55zUiRB4XkkkNxJMxySUZ+1cEmTA0rHaEj6Wz+ue
+LFkLMaoTF3IO0lrj/LPPUhytby56wwwD3nztFpIHYv8PmLXdnIGTHy8pVLNYv7cH
+gBiVjB4dTdOo9LM4/+9utmyVvGgL7JrhQRzy/PoDcxEYj9Z2xUYcfCxYz87O8tBO
+mGjaNtdxetsTUZowpClUfdlZ+k75vA5CiHIW4rzizaNJYwzVlqkEbiV+hDqt/9bG
+ie4WJNR2fwYG/bDBohqsocX7/9IikRpLZQFVavYWVqQ9W3vp3H4Jo4q0usCbhBw=
+=44Y6
 -----END PGP SIGNATURE-----
