@@ -19,6 +19,13 @@
 ################################################################
 
 
+2013-07-21  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.99999913 released.
+
+        * New version to accompany Term::Menus fix.
+
+
 2013-07-20  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.99999912 released.
